eks-blueprint-prd/add-ons/nginx-example/deployment-nginx-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  template:
    spec:
      containers:
      - name: nginx
        resources:
          requests: 
            memory: "2Gi"
            cpu: "1"
          limits: 
            memory: "4Gi"
            cpu: "2"
